feat: 知识库批量上传（文件/文件夹）+ 队列化解析进度 + 批量分类
- 上传页支持多选文件与选择文件夹，子文件夹名自动映射分类，前端串行逐个上传避免压垮服务
- 新增上传批次/批次明细表（Flyway V20260905），一次批量上传作为一个解析任务
- 解析统一异步化：上传只做校验、去重、存储、入队，消费端从 RustFS 下载后解析并向量化，Stream 消息只携带 kbId
- 消费者在状态流转时同步更新批次明细，管理页新增「解析任务」抽屉查看批次与单文件进度，失败项可重试
- 列表支持勾选后批量设置分类（PUT /api/knowledgebase/batch-category）
- 前端新增纯函数单测 test:kb-batch-upload 并纳入 CI；忽略 .zcode 会话缓存